Edited styles in dev mode.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Triopolis</title>
 </head>
 
+<style>
+    * {
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        margin-top: 2rem;
+    }
+</style>
+
 <body>
 
     <main>
