Fix iframe URLs to use HTTP instead of HTTPS

--- a/map.html
+++ b/map.html
@@ -36,13 +36,13 @@
         let title = '';
 
         if (type === 'trains') {
-            iframeUrl = 'https://triopolis-famille.nitro.games:8888/';
+            iframeUrl = 'http://triopolis-famille.nitro.games:8888/';
             title = 'Triopolis Trains Map';
         } else if (type === 'maps') {
-            iframeUrl = 'https://triopolis-famille.nitro.games:8888/maps'; // change si nécessaire
+            iframeUrl = 'http://triopolis-famille.nitro.games:8888/maps'; // change si nécessaire
             title = 'Triopolis Game Map';
         } else {
-            iframeUrl = 'https://triopolis-famille.nitro.games:8888/';
+            iframeUrl = 'http://triopolis-famille.nitro.games:8888/';
             title = 'Triopolis Map';
         }
 
@@ -52,4 +52,5 @@
     </script>
 </body>
 </html>
+
 
