Change Discord server link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <h1>Ce site est en développement</h1>
-        <h2>Revenez plus tard ou visitez notre <a href="https://discord.gg/Q3aYqN4F" target="_blank">Discord</a>.</h2>
+        <h2>Revenez plus tard ou visitez notre <a href="https://discord.gg/esM5UhFSX9" target="_blank">Discord</a>.</h2>
     </main>
 
 </body>
